mostly done with 640

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
     <head>
+        
         <link type="text/css" rel="stylesheet" href="assets/css/reset.css">
         <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="clearfix bottom-border" style="background-color: white">
+        <div class="clearfix bottom-border static" style="background-color: white">
             <div class="header clearfix">
                 <h1 id="name">Roger Pender</h1>
                 <div class="header-right">
