--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
     <head>
+        
         <link type="text/css" rel="stylesheet" href="assets/css/reset.css">
         <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="clearfix bottom-border" style="background-color: white">
