--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,6 @@
                 </form>
             </div>
         </div>
-        <footer>Copyright ©</footer>
+        <footer id="special-footer">Copyright ©</footer>
     </body>
 </html>
