--- a/portfolio.html
+++ b/portfolio.html
@@ -21,12 +21,12 @@
             <h2><strong>Portfolio</strong></h2>
                 <hr>
                 <div class="grid-container">
-                    <div class="grid-item"><img src="assets/images/cat1.jpg" 
-                alt="Hangman"
-                title="Hangman"
-                width="250px" height="200px">
-                    <div class="bottom-center">Hangman</div>
-                </div>
+                <div class="grid-item"><a href="https://rawgher.github.io/Word-Guess-Game/" target="_blank"><img src="assets/images/cat1.jpg" 
+                    alt="Hangman"
+                    title="Hangman"
+                    width="250px" height="200px"></a>
+                    <a href="https://rawgher.github.io/Word-Guess-Game/" style="text-decoration: none;" target="_blank"><div class="bottom-center">Hangman</div></a>
+                    </div>                 
                 <div class="grid-item"><img src="assets/images/headphones.jpg"
                 alt="RPG Game"
                 title="RPG Game"
