added link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,11 @@
                     width="250px" height="200px"></a>
                     <a href="https://rawgher.github.io/Word-Guess-Game/" style="text-decoration: none;" target="_blank"><div class="bottom-center">Hangman</div></a>
                     </div>                 
-                <div class="grid-item"><img src="assets/images/headphones.jpg"
+                <div class="grid-item"><a href="https://rawgher.github.io/RPG-Game/" style="text-decoration: none;" target="_blank"><img src="assets/images/headphones.jpg"
                 alt="RPG Game"
                 title="RPG Game"
-                width="250px" height="200px">
-                    <div class="bottom-center">RPG Game</div>
+                width="250px" height="200px"></a>
+                <a href="https://rawgher.github.io/RPG-Game/" style="text-decoration: none;" target="_blank"><div class="bottom-center">RPG Game</div></a>
                 </div>
                 <div class="grid-item"><img src="assets/images/giraffe.jpg"
                 alt="Trivia Game"
