--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,12 @@
                 width="250px" height="200px"></a>
                 <a href="https://rawgher.github.io/RPG-Game/" style="text-decoration: none;" target="_blank"><div class="bottom-center">RPG Game</div></a>
                 </div>
-                <div class="grid-item"><img src="assets/images/giraffe.jpg"
-                alt="Trivia Game"
-                title="Trivia Game"
-                width="250px" height="200px">
-                    <div class="bottom-center">Trivia Game</div>
+                <div class="grid-item"><a href="https://rawgher.github.io/trivia-game/" style="text-decoration: none;" target="_blank"><img src="assets/images/giraffe.jpg"
+                    alt="Trivia Game"
+                    title="Trivia Game"
+                    width="250px" height="200px"></a>
+                    <a href="https://rawgher.github.io/trivia-game/" style="text-decoration: none;" target="_blank"> 
+                    <div class="bottom-center">Trivia Game</div></a>
                 </div>
                 <div class="grid-item"><img src="assets/images/gorilla.jpg"
                 alt="Rutgers Info Widget"
